[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tiles/WallTransparency.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 1, 1 )

[node name="DownWall" type="Area2D"]
collision_layer = 0
collision_mask = 10
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 24 )

[connection signal="area_entered" from="." to="." method="_on_DownWall_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DownWall_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_DownWall_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DownWall_body_exited"]
